# Box-of-file

./: Cargo.toml  README.md
src/: data_struct.rs  main.rs
src/commands/: clear.rs  email_config.rs  find_file.rs  global.rs  index.rs  init.rs  mod.rs  search.rs  send_email.rs
src/python/: send_email.py
