[package]
name = "bof_test"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
filetime = "0.2"
sha2 = "0.10"
uuid = { version = "1.4", features = ["v4"] }
dirs = "6.0.0" 
lettre = "0.11.11"  

[[bin]]
name = "bof"
path = "src/main.rs"
